--- a/client/public/index.html
+++ b/client/public/index.html
@@ -70,7 +70,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-    <title>MOM Dashboard</title>
+    <title>TEST Dashboard</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
